feat: adicionar suporte a metadados de mídia e editor de posicionamento
- Implementa a classe MediaMetadataReader para ler metadados de imagens e vídeos, utilizando ffprobe para obter dimensões e duração.
- Cria testes para MediaMetadataReader, garantindo a leitura correta dos campos de vídeo.
- Adiciona o componente MediaPlacementEditor para permitir o ajuste do ponto focal de imagens e vídeos no CMS.
- Implementa componentes de mídia responsiva (PresentedImage e PresentedVideo) que respeitam o enquadramento definido para diferentes dispositivos.
- Adiciona tipos TypeScript para descrever a apresentação de mídia e suas propriedades.
- Implementa funções utilitárias para calcular a posição do objeto de mídia com base na apresentação responsiva.